recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:9: error: not found: value step
    current(step)
            ^